--- a/3ds.html
+++ b/3ds.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=400, height=200, initial-scale=1.0, user-scalable=no"> <!-- Adjusted for 3DS top screen -->
+    <meta name="viewport" content="width=400, height=200, initial-scale=1.0, user-scalable=no">
     <title>Platformer Game</title>
     <style>
         body {
@@ -24,20 +24,6 @@
             background-color: #8B4513; /* Brown ground color */
             border: 1px solid black; /* Optional: Add a border to make it more visible */
         }
-
-        .player {
-            position: absolute;
-            background-color: #FF0000; /* Red player color */
-            width: 30px;
-            height: 30px;
-        }
-
-        .platform {
-            position: absolute;
-            background-color: #228B22; /* Green platform color */
-            height: 20px;
-        }
-        
     </style>
 </head>
 <body>
@@ -63,7 +49,7 @@
         // Player properties
         var player = {
             x: 50,
-            y: 150, // Adjusted for the new canvas height
+            y: 150,
             width: 30,
             height: 30,
             speed: 4,
@@ -73,12 +59,31 @@
             grounded: false
         };
 
-        // Platform properties
-        var platforms = [
-            { x: 0, y: 180, width: 400, height: 20 }, // Adjusted width
-            { x: 100, y: 160, width: 100, height: 20 },
-            { x: 200, y: 120, width: 100, height: 20 }
+        // Define end object for level completion
+        var endObject = {
+            x: 370, // Position near the right edge of the canvas
+            y: 150, // Same height as the player
+            width: 20,
+            height: 30
+        };
+
+        // Levels definition
+        var levels = [
+            [ // Level 1
+                { x: 0, y: 180, width: 400, height: 20 }, // Ground platform
+                { x: 100, y: 160, width: 100, height: 20 },
+                { x: 200, y: 120, width: 100, height: 20 }
+            ],
+            [ // Level 2
+                { x: 0, y: 180, width: 400, height: 20 }, // Ground platform
+                { x: 50, y: 150, width: 100, height: 20 },
+                { x: 250, y: 100, width: 100, height: 20 },
+                { x: 150, y: 130, width: 50, height: 20 }
+            ]
         ];
+
+        var currentLevel = 0; // Start with level 0
+        var platforms = levels[currentLevel]; // Platforms for the current level
 
         // Draw player
         function drawPlayer() {
@@ -95,6 +100,12 @@
             }
         }
 
+        // Draw end object
+        function drawEndObject() {
+            ctx.fillStyle = '#FFD700'; // Gold color for the end object
+            ctx.fillRect(endObject.x, endObject.y, endObject.width, endObject.height);
+        }
+
         // Handle key events
         var keys = {};
         window.addEventListener('keydown', function(e) {
@@ -106,22 +117,23 @@
 
         // Update player and check collisions
         function update() {
-            player.dy += player.gravity;
-            player.y += player.dy;
+            player.dy += player.gravity; // Apply gravity
+            player.y += player.dy; // Move player by its vertical speed
 
             // Check for collision with platforms
-            player.grounded = false;
+            player.grounded = false; // Reset grounded state
             for (var i = 0; i < platforms.length; i++) {
                 var platform = platforms[i];
+                // Check for collision
                 if (
                     player.x < platform.x + platform.width &&
                     player.x + player.width > platform.x &&
                     player.y + player.height < platform.y + platform.height &&
                     player.y + player.height + player.dy >= platform.y
                 ) {
-                    player.dy = 0;
-                    player.y = platform.y - player.height;
-                    player.grounded = true;
+                    player.dy = 0; // Reset vertical speed
+                    player.y = platform.y - player.height; // Place player on top of platform
+                    player.grounded = true; // Player is grounded
                 }
             }
 
@@ -129,6 +141,22 @@
             if (player.y > canvas.height) {
                 player.y = canvas.height;
                 player.dy = 0;
+            }
+
+            // Check for collision with the end object
+            if (
+                player.x < endObject.x + endObject.width &&
+                player.x + player.width > endObject.x &&
+                player.y < endObject.y + endObject.height &&
+                player.y + player.height > endObject.y
+            ) {
+                window.location.href = "https://internetperson-dev.github.io/site/3ds1"; // Redirect to the specified URL
+            }
+
+            // Check if the player has reached the end of Level 1
+            if (currentLevel === 0 && player.x + player.width > canvas.width) {
+                currentLevel++; // Move to Level 2
+                resetLevel(); // Reset for the new level
             }
 
             // Handle player movement
@@ -143,7 +171,16 @@
             // Clear the canvas and redraw everything
             ctx.clearRect(0, 0, canvas.width, canvas.height);
             drawPlatforms();
+            drawEndObject(); // Draw the end object
             drawPlayer();
+        }
+
+        // Reset the current level
+        function resetLevel() {
+            player.x = 50; // Reset player's position
+            player.y = 150; // Reset player's height
+            player.dy = 0; // Reset vertical speed
+            platforms = levels[currentLevel]; // Load the new level's platforms
         }
 
         // Start game loop at 60 FPS
