--- a/index.html
+++ b/index.html
@@ -55,10 +55,9 @@ button:hover {
     <button onclick="location.href='http://froxot.de/'">3DS Games - 2</button>
     <button onclick="location.href='https://www.elizium.nu/scripts/lemmings/'">Lemmings</button>
     <button onclick="location.href='https://internetperson-dev.github.io/site/platformer/title.html'">Test Game</button>
-    <button onclick="location.href='https://internetperson-dev.github.io/site/fortnite'">Fortnite Game Streaming</button>
     <button onclick="location.href='https://internetperson-dev.github.io/site/musicpwa/musictest.html'">Music PWA Test</button>
-    <button onclick="location.href='https://internetperson-dev.github.io/site/yt-bad.html'">yt-bad</button>
-    <button onclick="location.href='https://internetperson-dev.github.io/site/yt-good.html'">yt-good</button>
+    <button onclick="location.href='https://internetperson-dev.github.io/site/etc/yt-bad.html'">yt-bad</button>
+    <button onclick="location.href='https://internetperson-dev.github.io/site/etc/yt-good.html'">yt-good</button>
     <footer>Created by Internetperson-dev</footer>
 </div>
 </body>
