--- a/etc/SNES.html
+++ b/etc/SNES.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="https://kazuki-4ys.github.io/web_apps/snes9x-2005-wasm/style.css">
   <title>Snes9x-2005-wasm</title>
 </head>
 <body>
