--- a/Best Fortnite Maps.html
+++ b/Best Fortnite Maps.html
@@ -3,155 +3,216 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Best Fortnite Maps — Side Text</title>
+<title>Best Fortnite Maps — Discovery</title>
 <link rel="icon" type="image/png" href="favicon.png">
-
-<!-- OneSignal SDK -->
-<script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async></script>
-<script>
-  window.OneSignal = window.OneSignal || [];
-OneSignal.push(function() {
-  OneSignal.init({
-    appId: "b7d38b21-0e06-4a5a-b2b9-b6864f2b9b44",
-    serviceWorkerPath: '/site/OneSignalSDKWorker.js', // correct path
-    autoRegister: true
-  });
-});
-</script>
-
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 
 <style>
-:root{
-  --bg:#050509; --card-a:#13131f; --card-b:#1a1a29; --muted:#bcbce0; --accent:#8fa2ff; --radius:14px;
-}
-body { margin:0; padding:2rem; font-family:"Poppins", system-ui, sans-serif; background: radial-gradient(circle at top left, #0a0a14 0%, var(--bg) 100%); color:#e8e8f0; }
-.wrap { max-width:1100px; margin:0 auto; }
-h1{ text-align:center; margin:0 0 1.5rem; color:#fff; text-shadow:0 0 10px rgba(143,162,255,0.18); font-size:2rem; }
-.layout { display:grid; grid-template-columns:1fr 300px; gap:2rem; }
-main { min-height:100vh; }
-aside { background:linear-gradient(145deg,#181824,#10101a); border-radius:var(--radius); padding:1rem; border:1px solid #2c2c44; color:var(--muted); box-shadow:0 10px 30px rgba(0,0,0,0.45); font-size:0.95rem; }
-.preview { display:grid; grid-template-columns:300px 1fr; gap:1rem; align-items:stretch; background: linear-gradient(145deg, var(--card-a), var(--card-b)); border-radius: var(--radius); overflow:hidden; border:1px solid #292947; box-shadow:0 6px 18px rgba(0,0,0,0.45); margin-bottom:1.25rem; min-height:150px; }
-.preview img { width:100%; height:100%; object-fit:cover; display:block; background:linear-gradient(180deg,#0c0c14,#11111a); }
-.info { padding:1rem 1.25rem; display:flex; flex-direction:column; justify-content:center; }
-.info h3 { margin:0 0 0.5rem 0; color:#fff; font-size:1.15rem; text-shadow:0 0 6px rgba(100,150,255,0.18); }
-.info p { margin:0; color:var(--muted); line-height:1.45; font-size:0.96rem; }
-.meta-row { margin-top:0.75rem; display:flex; gap:0.75rem; align-items:center; color:#9fb2ff; font-size:0.85rem; }
-a { text-decoration:none; color:inherit; }
-.no-image { display:flex; align-items:center; justify-content:center; color:var(--muted); font-weight:600; font-size:1rem; background:linear-gradient(180deg,#0c0c14,#0e0e18); }
-
-@media (max-width:980px){
-  .layout{ grid-template-columns:1fr; }
-  .preview { grid-template-columns:1fr; }
-  .preview img { height:220px; }
-  aside { order:-1; }
+:root {
+  --bg: #0b0b14;
+  --card-bg: rgba(25, 25, 45, 0.6);
+  --card-border: rgba(255, 255, 255, 0.1);
+  --accent: #7c83ff;
+  --accent-glow: rgba(124, 131, 255, 0.4);
+  --text-main: #e2e2f0;
+  --text-muted: #9494b8;
+  --radius: 20px;
 }
 
-.video { position: relative; width: 100%; max-width: 600px; margin-bottom:1.5rem; }
-.video__youtube { padding-bottom: 56.23%; width:100%; height:0; overflow:hidden; position:relative; background-color:black; }
-.video__placeholder { width:100%; position:absolute; top:0; left:0; height:100%; object-fit:cover; }
-.video__button { background:none; border:0; cursor:pointer; height:100%; left:0; position:absolute; text-indent:-9999px; top:0; width:100%; }
-.video__button:before { width:100%; height:100%; content:''; position:absolute; top:50%; left:50%; transform:translate(-50%,-50%); background:url(https://github.com/Internetperson-dev/site/raw/refs/heads/main/etc/yt/yt.avif) no-repeat center center; background-size:10%; }
-.video__button:hover:before { background:url(https://github.com/Internetperson-dev/site/raw/refs/heads/main/etc/yt/yt.avif) no-repeat center center; background-size:10%; }
-.video__iframe { position:absolute; top:0; left:0; width:100%; height:100%; }
+body { 
+  margin: 0; 
+  padding: 0; 
+  font-family: 'Inter', system-ui, sans-serif; 
+  background: var(--bg);
+  background-image: 
+    radial-gradient(circle at 10% 20%, rgba(124, 131, 255, 0.05) 0%, transparent 40%),
+    radial-gradient(circle at 90% 80%, rgba(124, 131, 255, 0.05) 0%, transparent 40%);
+  color: var(--text-main);
+  line-height: 1.6;
+}
+
+.wrap { max-width: 1200px; margin: 0 auto; padding: 3rem 1.5rem; }
+
+header { text-align: center; margin-bottom: 4rem; }
+h1 { 
+  font-size: 3.5rem; 
+  font-weight: 800; 
+  letter-spacing: -0.02em;
+  margin: 0;
+  background: linear-gradient(to bottom, #fff 30%, var(--text-muted));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.layout { display: grid; grid-template-columns: 1fr 320px; gap: 3rem; }
+
+/* Video Styling */
+.video { 
+  border-radius: var(--radius); 
+  overflow: hidden; 
+  box-shadow: 0 20px 50px rgba(0,0,0,0.5); 
+  border: 1px solid var(--card-border);
+  margin-bottom: 3rem;
+}
+.video__youtube { position: relative; padding-bottom: 56.25%; background: #000; }
+.video__placeholder { width: 100%; height: 100%; position: absolute; object-fit: cover; filter: brightness(0.7); }
+.video__button { 
+  position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);
+  width: 80px; height: 80px; background: var(--accent); border: none; border-radius: 50%;
+  cursor: pointer; z-index: 2; transition: all 0.3s ease;
+  box-shadow: 0 0 30px var(--accent-glow);
+  color: white; font-weight: bold;
+}
+.video__button:hover { transform: translate(-50%, -50%) scale(1.1); background: #fff; color: var(--accent); }
+
+/* Card Styling */
+.preview-link { text-decoration: none; color: inherit; display: block; margin-bottom: 1.5rem; }
+.preview { 
+  display: grid; 
+  grid-template-columns: 280px 1fr; 
+  background: var(--card-bg);
+  backdrop-filter: blur(10px);
+  border-radius: var(--radius);
+  border: 1px solid var(--card-border);
+  overflow: hidden;
+  transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+.preview:hover {
+  transform: translateY(-5px) scale(1.01);
+  border-color: var(--accent);
+  box-shadow: 0 10px 30px rgba(0,0,0,0.4);
+}
+
+.thumb-wrap { position: relative; height: 100%; min-height: 180px; background: #161625; }
+.preview img { width: 100%; height: 100%; object-fit: cover; transition: 0.5s ease; }
+.info { padding: 1.5rem 2rem; display: flex; flex-direction: column; justify-content: center; }
+.info h3 { margin: 0 0 0.5rem; font-size: 1.4rem; color: #fff; }
+.info p { margin: 0; color: var(--text-muted); font-size: 0.95rem; }
+
+.meta-row { 
+  margin-top: 1rem; 
+  font-size: 0.8rem; 
+  text-transform: uppercase; 
+  letter-spacing: 0.1em; 
+  color: var(--accent); 
+  font-weight: 700; 
+}
+
+/* Sidebar */
+aside { 
+  position: sticky; top: 2rem; 
+  height: fit-content;
+  background: rgba(255,255,255,0.03); 
+  padding: 2rem; 
+  border-radius: var(--radius);
+  border: 1px solid var(--card-border);
+}
+.btn-primary {
+  display: block; width: 100%; padding: 1rem;
+  background: var(--accent); color: white;
+  border: none; border-radius: 12px;
+  font-weight: 700; cursor: pointer;
+  transition: 0.3s; margin-top: 1rem;
+}
+.btn-primary:hover { background: #fff; color: var(--accent); box-shadow: 0 0 20px var(--accent-glow); }
+
+@media (max-width: 980px) {
+  .layout { grid-template-columns: 1fr; }
+  .preview { grid-template-columns: 1fr; }
+  h1 { font-size: 2.5rem; }
+  aside { order: -1; position: relative; top: 0; margin-bottom: 2rem; }
+}
 </style>
 </head>
 <body>
-<div class="wrap">
-<h1>Best Fortnite Maps</h1>
-<div class="layout">
-<main>
-  <div class="video">
-    <div class="video__youtube" data-youtube>
-      <img src="https://raw.githubusercontent.com/Internetperson-dev/site/refs/heads/main/fortnite.avif" class="video__placeholder" />
-      <button class="video__button" data-youtube-button="https://www.youtube.com/embed/Pr9LcxHFE_k">Play</button>
-    </div>
-  </div>
-  <div id="container"></div>
-</main>
 
-<aside>
-<h3 style="color:#9bb8ff; margin-top:0;">Featured Sections</h3>
-<ul style="padding-left:1rem; margin-top:0.5rem;">
-<li>
-<button onclick="window.open('https://www.fortnite.com/download?lang=en-US', '_blank')" style="padding:0.5rem 1rem; background-color:#9bb8ff; color:white; border:none; border-radius:5px; cursor:pointer;">Play Fortnite</button>
-</li>
-</ul>
-</aside>
-</div>
+<div class="wrap">
+  <header>
+    <h1>Fortnite Discovery</h1>
+    <p style="color: var(--text-muted)">The most unique UEFN experiences, handpicked.</p>
+  </header>
+
+  <div class="layout">
+    <main>
+      <div class="video">
+        <div class="video__youtube" data-youtube>
+          <img src="https://raw.githubusercontent.com/Internetperson-dev/site/refs/heads/main/fortnite.avif" class="video__placeholder" />
+          <button class="video__button" data-youtube-button="https://www.youtube.com/embed/Pr9LcxHFE_k">▶</button>
+        </div>
+      </div>
+      
+      <div id="container"></div>
+    </main>
+
+    <aside>
+      <h3 style="margin-top:0">Featured</h3>
+      <p style="font-size: 0.9rem; color: var(--text-muted)">New maps are added weekly. Don't forget to enable notifications.</p>
+      <button class="btn-primary" onclick="window.open('https://www.fortnite.com/download', '_blank')">Launch Fortnite</button>
+    </aside>
+  </div>
 </div>
 
 <script>
-// --- Lightweight YouTube Player ---
-(function(window){
-  'use strict';
-  window.code = window.code || {};
-  window.code.lightweightYoutubePlayer = function(){
-    const videos=[...document.querySelectorAll('[data-youtube]')];
-    function init(){ videos.forEach(bindEvent); }
-    function bindEvent(el){
-      const btn=el.querySelector('[data-youtube-button]');
-      if(!btn) return;
-      btn.addEventListener('click', createIframe);
-    }
-    function createIframe(event){
-      const url=event.target.dataset.youtubeButton;
-      const placeholder=event.target.parentNode;
-      const iframeHTML=`<div class="video__youtube"><iframe class="video__iframe" src="${url}?autoplay=1" frameborder="0" allowfullscreen></iframe></div>`;
-      placeholder.style.display='none';
-      placeholder.insertAdjacentHTML('beforebegin', iframeHTML);
-      placeholder.remove();
-    }
-    return { init };
-  };
-})(window);
-document.addEventListener('DOMContentLoaded',()=>{ window.code.lightweightYoutubePlayer().init(); });
+// --- Video Logic ---
+document.addEventListener('DOMContentLoaded', () => {
+  const btn = document.querySelector('[data-youtube-button]');
+  btn.addEventListener('click', (e) => {
+    const url = e.target.dataset.youtubeButton;
+    const parent = e.target.closest('.video__youtube');
+    parent.innerHTML = `<iframe class="video__iframe" style="position:absolute;top:0;left:0;width:100%;height:100%;" src="${url}?autoplay=1" frameborder="0" allowfullscreen allow="autoplay"></iframe>`;
+  });
+});
 
-// --- Fortnite Maps Previews ---
-const FALLBACK_SVG='data:image/svg+xml;utf8,'+encodeURIComponent(`<svg xmlns="http://www.w3.org/2000/svg" width="1200" height="800"><defs><linearGradient id="g" x1="0" x2="1"><stop offset="0" stop-color="#0c0c14"/><stop offset="1" stop-color="#11111a"/></linearGradient></defs><rect width="100%" height="100%" fill="url(#g)"/><g fill="#bdbde6" font-family="sans-serif" font-size="40" text-anchor="middle"><text x="50%" y="48%">No preview image</text><text x="50%" y="60%" font-size="24" opacity="0.85">Click the card to open the map</text></g></svg>`);
-
-const maps=[
-  {url:"https://www.fortnite.com/@jakus/3623-3871-1041?lang=en-US", title:"Battle Royale: HIGH TIDE | Snapshots", desc:"A full fan-made Battle Royale game mode. Sadly doesn't get a lot of players."},
-  {url:"https://www.fortnite.com/@teamrevibed/9997-0482-5512?lang=en-US", title:"Chapter 3: Revibed", desc:"A solid recreation of Chapter 3 Vibin'."},
-  {url:"https://www.fortnite.com/@pandvilspam/2229-0002-0277?lang=en-US", title:"Rewind Royale", desc:"A version of Chapter 1 Fortnite that is more accurate."},
-  {url:"https://www.fortnite.com/@epic/ranked-ballistic?lang=en-US", title:"Ranked Ballistic (By Epic Games)", desc:"A kinda fun Counter-Strike–like map by Epic Games."},
-  {url:"https://www.fortnite.com/@playkigai/4817-2697-1013", title:"ARENA WARS - FORTREAL", desc:"A recreation of Unreal Tournament in Fortnite."}
+// --- Map Data & Logic ---
+const maps = [
+  {url:"https://www.fortnite.com/@jakus/3623-3871-1041", title:"High Tide | Snapshots", desc:"An ambitious fan-made Battle Royale experience featuring custom mechanics and a unique tropical setting."},
+  {url:"https://www.fortnite.com/@teamrevibed/9997-0482-5512", title:"Chapter 3: Revibed", desc:"Relive the vibes of the Seven vs. The Imagined Order in this high-fidelity Chapter 3 recreation."},
+  {url:"https://www.fortnite.com/@pandvilspam/2229-0002-0277", title:"Rewind Royale", desc:"The ultimate nostalgia trip. A meticulously crafted version of the OG Chapter 1 map."},
+  {url:"https://www.fortnite.com/@epic/ranked-ballistic", title:"Ranked Ballistic", desc:"Tactical 5v5 combat. Precise gunplay and objective-based rounds designed by Epic Games."},
+  {url:"https://www.fortnite.com/@playkigai/4817-2697-1013", title:"Arena Wars", desc:"Fast-paced, twitch-reflex gameplay inspired by the golden era of Unreal Tournament."}
 ];
 
-const container=document.getElementById('container');
-maps.forEach(map=>{
-  const card=document.createElement('article');
-  card.className='preview';
-  card.innerHTML=`<a href="${map.url}" target="_blank" rel="noopener noreferrer" style="display:block; color:inherit; text-decoration:none;"><div class="thumb-wrap"><div class="no-image"></div><img class="real" style="display:none;" /></div><div class="info"><h3>${map.title}</h3><p>${map.desc}</p><div class="meta-row"><span>View on Fortnite</span></div></div></a>`;
+const container = document.getElementById('container');
+const FALLBACK_SVG = `data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100'%3E%3Crect width='100' height='100' fill='%231a1a2e'/%3E%3C/svg%3E`;
+
+maps.forEach(map => {
+  const card = document.createElement('a');
+  card.className = 'preview-link';
+  card.href = map.url;
+  card.target = "_blank";
+  card.innerHTML = `
+    <article class="preview">
+      <div class="thumb-wrap">
+        <img src="${FALLBACK_SVG}" class="map-img" alt="${map.title}">
+      </div>
+      <div class="info">
+        <h3>${map.title}</h3>
+        <p>${map.desc}</p>
+        <div class="meta-row">Explore Map →</div>
+      </div>
+    </article>
+  `;
   container.appendChild(card);
+  
+  // Dynamic Image Fetching
+  const imgEl = card.querySelector('.map-img');
+  const cacheKey = 'v2_preview_' + map.url;
+  const cached = localStorage.getItem(cacheKey);
+
+  if(cached) {
+    imgEl.src = JSON.parse(cached);
+  } else {
+    fetch(`https://api.microlink.io/?url=${encodeURIComponent(map.url)}`)
+      .then(res => res.json())
+      .then(json => {
+        const imgUrl = json.data?.image?.url;
+        if(imgUrl) {
+          imgEl.src = imgUrl;
+          localStorage.setItem(cacheKey, JSON.stringify(imgUrl));
+        }
+      });
+  }
 });
-
-maps.forEach((map,i)=>{
-  const imgEl=container.querySelectorAll('.real')[i];
-  const cacheKey='preview_'+map.url;
-  let meta=null;
-  const cached=localStorage.getItem(cacheKey);
-  if(cached){ try{ meta=JSON.parse(cached); }catch(e){ meta=null;} }
-
-  if(!meta){
-    fetch('https://api.microlink.io/?url='+encodeURIComponent(map.url))
-      .then(res=>res.json())
-      .then(json=>{ meta=json.data||null; if(meta)localStorage.setItem(cacheKey,JSON.stringify(meta)); })
-      .catch(err=>{ console.warn('preview fetch failed',map.url,err); meta=null; })
-      .finally(()=>{ setTimeout(()=>setImage(imgEl,map,meta),0); });
-  } else { setImage(imgEl,map,meta); }
-});
-
-function setImage(imgEl,map,meta){
-  const url=(meta && meta.image && meta.image.url)?meta.image.url:FALLBACK_SVG;
-  const tmp=new Image();
-  tmp.src=url;
-  tmp.onload=()=>{ imgEl.src=url; imgEl.style.display='block'; imgEl.previousElementSibling.style.display='none'; };
-}
-
-// --- PWA service worker setup ---
-if('serviceWorker' in navigator){
-  navigator.serviceWorker.register('/site/service-worker.js');
-}
 </script>
 </body>
 </html>
